implemented logging of messages from web ui

--- a/config.py.template
+++ b/config.py.template
@@ -2,6 +2,7 @@
 # Configuration file
 
 db='data/status.d'
+message_db='data/messages.d'
 log='data/log.d'
 # IMEI of the target RockBLOCK
 imei = ""
